# Grimp

./: CMakeLists.txt  README.md
include/: mainwindow.h
src/: mainwindow.cpp
